--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "AmpliChat - Stay Connected at Events",
-  "name": "Amplichat - Stay Connected at Events. Chat with other attendees and make new friends at your favorite events and concerts.",
+  "short_name": "RoundedTip - Get the tip that rounds your bill",
+  "name": "RoundedTip - Enter the bill, get the precise tip that rounds your total bill.",
   "icons": [
     {
-      "src": "amplichat_icon.ico",
+      "src": "roundedtip.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
